[package]
name = "ping-the-internet"
version = "0.1.0"
edition = "2021"

[dependencies]
async-compression = { version = "0.4.5", features = ["tokio", "zlib"] }
chrono = "0.4.31"
futures = "0.3.29"
itertools = "0.12.0"
nom = "7.1.3"
tokio = { version = "1.35.0", features = ["full"] }
tokio-icmp-echo = "0.4.1"
tokio-utils = "0.1.2"
