[package]
name = "ping-the-internet"
version = "0.1.0"
edition = "2021"

[dependencies]
async-compression = { version = "0.4.5", features = ["tokio", "zlib"] }
chrono = "0.4.31"
futures = "0.3.29"
itertools = "0.12.0"
lazy_static = "1.4.0"
nom = "7.1.3"
simple-pool = "0.0.15"
tokio = { version = "1.35.0", features = ["full"] }
tokio-icmp-echo = "0.4.1"
