[package]
name = "ping-the-internet"
version = "0.1.0"
edition = "2021"

[dependencies]
async-compression = { version = "0.4.5", features = ["tokio", "zlib"] }
chrono = "0.4.31"
futures = "0.3.29"
itertools = "0.13.0"
nom = "7.1.3"
tokio = { version = "1.35.0", features = ["full"] }
tokio-icmp-echo = "0.4.1"
raylib = { version = "5.0.1", features = ["opengl_33"] }
rand = "0.8.5"
image = {version = "0.25.1", default-features = false, features = ["png", "rayon"]}
hilbert_curve = "0.2.0"
once_cell = "1.19.0"
